--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,10 +7,14 @@
   <div class="box">
 
     <% newListItems.forEach((item) => { %>
-      <div class="item">
-        <input type="checkbox">
-      <p> <%= item.name %></p>
-      </div>
+      <form action="/delete" method="post">
+        <div class="item">
+          <input onchange="this.form.submit()" value="<%=item._id%>" type="checkbox" name="checkbox">
+        <p> <%= item.name %></p>
+        </div>
+
+      </form>
+      
     <% }) %>
 
       <form class="item" action="/" method="post">
