--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,26 +1,36 @@
 <%- include("header") -%>
 
-  <div class="box" id="heading">
-    <h1> <%= listTitle %> </h1>
-  </div>
+<div class="box" id="heading">
+  <h1><%= listTitle %></h1>
+</div>
 
-  <div class="box">
-
-    <% newListItems.forEach((item) => { %>
-      <form action="/delete" method="post">
-        <div class="item">
-          <input onchange="this.form.submit()" value="<%=item._id%>" type="checkbox" name="checkbox">
-        <p> <%= item.name %></p>
-        </div>
-
-      </form>
+<div class="box">
+  <% newListItems.forEach((item) => { %>
+  <form action="/delete" method="post">
+    <div class="item">
+      <input
+        
+        value="<%=item._id%>"
+        type="checkbox"
+        name="checkbox"
+        onchange="this.form.submit()"
+      />
+      <p><%= item.name %></p>
       
-    <% }) %>
+    </div>
+    <input type="hidden" name="listName" value="<%= listTitle %>" />
+    </form>
+  <% }) %>
 
-      <form class="item" action="/" method="post">
-        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-        <button type="submit" name="list" value="<%= listTitle %>">+</button>
-      </form>
-  </div>
+  <form class="item" action="/" method="post">
+    <input
+      type="text"
+      name="newItem"
+      placeholder="New Item"
+      autocomplete="off"
+    />
+    <button type="submit" name="list" value="<%= listTitle %>">+</button>
+  </form>
+</div>
 
 <%- include("footer") -%>
